@@ -16,6 +16,8 @@ Version 1.3-5, August 23, 2011
     * New argument partype added to dc.parfit,
       possible options (balancing, parchains, both)
       are described on the help page.
+    * No warning about lack of rjags when the package
+      is present but loading produces error (.dll not found, etc).
 
 Version 1.3-4, July 9, 2011
     * dc.fit: updating fixed (only updated after 2nd iteration).
